# drink-counter-bot

./: .env.example  Cargo.toml  Containerfile
src/: main.rs
