[package]
name = "drink-counter-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["macros"] }
lazy_static = "1.4.0"
log = "*"
env_logger = "0.9"
tbot = { version = "0.6.7", default-features = false, features = ["rustls", "proxy"] }
